# chip8

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: CMakeLists.txt  chip8.cpp  chip8.hpp  cpu.cpp  cpu.hpp  display.cpp  display.hpp  emulator.cpp  emulator.hpp  main.cpp  sound.cpp  sound.hpp  utils.hpp
src/res/: chip8.rc
